fix: favorites and history overflow

--- a/frontend/src/query/FavoritesPane/style.module.scss
+++ b/frontend/src/query/FavoritesPane/style.module.scss
@@ -1,6 +1,7 @@
 .query-text {
 	user-select: all;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 .entry-header {
