--- a/frontend/src/query/HistoryPane/style.module.scss
+++ b/frontend/src/query/HistoryPane/style.module.scss
@@ -1,4 +1,5 @@
 .query-text {
 	user-select: all;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
